Added the requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
-flask
+Flask
 mysql-connector-python
-opencv-python-headless
+opencv-python
 deepface
 chromadb
 gpt4all
+bcrypt
+sentence-transformers
 numpy
 pandas
-requests
+scipy
+matplotlib
+h5py
+tensorflow
+torch
+torchvision
+torchaudio
+nltk
+transformers
+tqdm
+regex
